--- a/referencias.bib
+++ b/referencias.bib
@@ -145,7 +145,7 @@
 %https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&ved=2ahUKEwiI3uzh9M7kAhXTKrkGHT2nBgcQFjABegQIAxAC&url=http%3A%2F%2Frevistapensar.com.br%2Ftecnologia%2Fpasta_upload%2Fartigos%2Fa147.pdf&usg=AOvVaw056AquBC_nDiAR9IDjYeEc
 @Article{desenvWebFrame,
   Title                    = {Desenvolvimento de aplicações web e dispositivos móveis utilizando frameworks},
-  Author                   = {Carlos Henrique Gonçalves Dias, Wisney Almeida Amorim, Nelson Ribeiro de Carvalho Júnior},
+  Author                   = {Carlos Henrique Gonçalves Dias and Wisney Almeida Amorim and Nelson Ribeiro de Carvalho Junior},
   Year                     = {2014}
 }
 
