--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -19,6 +19,7 @@
     \item[GSM] \textit{Global System for Mobile Communications}
     \item[HTML] \textit{HyperText Markup Language}
     \item[HTTP] \textit{Hypertext Transfer Protocol}
+    \item[ID] \textit{Integrated Development Environment}
     \item[IMAP] \textit{Internet Message Access Protocol}
     \item[IP] \textit{Internet Protocol Address}
     \item[JS] \textit{JavaScript}
