--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -15,11 +15,11 @@ Locomoção é uma grande preocupação para quem vive em grandes centros urbano
 %%% Original: No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
 
 %%% Rev-Madalozzo: A primeira frase deste parágrafo também é uma frase sem causa e efeito. Você comenta que é necessária a otimização (causa) mas não efeito o porque é necessária (efeito). Ajustei.
-No cenário urbano atual, é necessário um algoritmo para otimização de rotas para que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo em rotas mal analisadas. Considerando esta situação, o desenvolvimento de um aplicativo móvel conectado a \textit{Google Maps Platform}, proporcionando uma solução significativa na economia de tempo para os usuários, se tornaria uma solução capaz de resolver tal problema.
+No cenário urbano atual, é necessário um algoritmo para otimização de rotas para que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo em rotas mal analisadas. Considerando esta situação, o desenvolvimento de um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários, se tornaria uma solução capaz de resolver tal problema.
 
 %%% Original: Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
 
-Utilizando a \textit{Google Maps Platform}, é possível encontrar o melhor trajeto de um ponto inicial até um ponto destino com dados abrangentes e, também, com dados do trânsito em tempo real. Desta maneira, oferecendo experiências personalizadas e ágeis capazes de tornar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
+Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto de um ponto inicial até um ponto destino com dados abrangentes e, também, com dados do trânsito em tempo real. Desta maneira, oferecendo experiências personalizadas e ágeis capazes de tornar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
 
 %%% Original: No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
 
