--- a/uri-tcc.tex
+++ b/uri-tcc.tex
@@ -38,12 +38,12 @@
 %\include{text-elements/pre-textuais/epigrafe}              			   % Epígrafe
 \include{text-elements/pre-textuais/resumo}             			   % Resumo em Português
 \include{text-elements/pre-textuais/abstract}             		           % Resumo em Inglês
-\include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-figuras}   % Lista de Figuras
+\include{text-elements/pre-textuais/listas/lista-figuras}   % Lista de Figuras
 %\include{text-elements/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
 \include{text-elements/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
 \include{text-elements/pre-textuais/listas/lista-siglas}          		   % Lista de Abreviaturas e Siglas
 %\include{text-elements/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
-%\include{text-elements/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
+\include{text-elements/pre-textuais/listas/lista-algoritmos}   % Lista de Algoritmos
 \include{text-elements/pre-textuais/sumario}               			   % Sumário
 
 \textual
