--- a/template-config/pacotes.tex
+++ b/template-config/pacotes.tex
@@ -45,3 +45,5 @@
 % \renewcommand*\familydefault{\sfdefault}
 % Configura todo o documento para times new roman
 \renewcommand{\familydefault}{ptm}
+
+\input{template-config/listings.tex}
