--- a/text-elements/textuais/conclusao.tex
+++ b/text-elements/textuais/conclusao.tex
@@ -1,3 +1,9 @@
 % CONCLUSÃO--------------------------------------------------------------------
 
 \chapter{CONCLUSÃO E TRABALHOS FUTUROS}
+A
+%O desenvolvimento da aplicação permitiu explorar um grande acervo tecnológico, começando pelo paradigma de desenvolvimento móvel híbrido no qual se utiliza uma mistura de tecnologias web e nativas, gerando automaticamente aplicativos multiplataforma.
+
+\newpage
+B
+%Os trabalhos futuros terão como objetivo melhorar e expandir as funcionalidades da aplicação.
