--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -53,18 +53,19 @@ O próximo passo foi a modelagem dos dados, onde verificou-se que seria necessá
     \label{fig:trigger}
 \end{figure}
 
-%\begin{algorithm}[H]
- 
 \section{Coleta de dados}
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex}
 
 \section{Módulo de gerenciamento}
-%%% Rev-Madalozzo: Aqui no módulo de gerenciamento sugiro você listar todos os pacotes de terceiros que é util e que você utilizou na tua aplicação. Por exemplo, na aula usamos o AdminLTE e PDF, caso tu uso algum módulo de terceiros lista neste Capítulo 
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex}
 
 \section{Consulta de dados}
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/consulta-dados.tex}
 
 \section{Módulo de entrega}
+\input{text-elements/textuais/desenvolvimento/desenvolvimento/mod-entrega.tex}
 
-%Figura 29 - Trecho de código em PHP para calcular a proporção de cada cluster no contexto do usuário
+%\begin{algorithm}[H]
 %O trecho de código fonte que é apresentado a seguir demonstra como é o serviço de                login do aplicativo: 
 %, conforme apresenta a figura 19 
 %, conforme a figura 20 mostra
