--- a/referencias.bib
+++ b/referencias.bib
@@ -55,21 +55,21 @@
   Author                   = {Tiago Semprebom and Rômulo de Oliveira and Carlos Montez},
   Year                     = {2006},
   publisher={XII WEBMEDIA - Simpósio Brasileiro de Sistemas Multimídia e Web}
-  url={http://www.romulosilvadeoliveira.eng.br/artigos/Tiago-Romulo-Montez-Webmedia2006.pdf}
+  %url={http://www.romulosilvadeoliveira.eng.br/artigos/Tiago-Romulo-Montez-Webmedia2006.pdf}
 }
 
 @Article{apache:Marcelo,
   Title                    = {Análise do Servidor Web Apache em Clusters OpenMosix com Memória Compartilhada Distribuída},
   Author                   = {Marcelo Soares Souza},
   Year                     = {2004},
-  url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
+  %url={https://www.researchgate.net/profile/Marcelo_Souza7/publication/228608559_Analise_do_Servidor_Web_Apache_em_Clusters_OpenMosix_com_Memoria_Compartilhada_Distribuida/links/0046351a6611e5a783000000/Analise-do-Servidor-Web-Apache-em-Clusters-OpenMosix-com-Memoria-Compartilhada-Distribuida.pdf}
 }
 
 @Article{mysql:ufpe,
   Title                    = {Comparativo de Desempenho entre Bancos de Dados de Código Aberto},
   Author                   = {Carlos E. S. Pires and Rilson O. Nascimento and Ana C. Salgado},
   Year                     = {2008},
-  url={https://www.researchgate.net/profile/Ana_Carolina_Salgado/publication/242213657_Comparativo_de_Desempenho_entre_Bancos_de_Dados_de_Codigo_Aberto/links/004635296426ba710e000000/Comparativo-de-Desempenho-entre-Bancos-de-Dados-de-Codigo-Aberto.pdf},
+  %url={https://www.researchgate.net/profile/Ana_Carolina_Salgado/publication/242213657_Comparativo_de_Desempenho_entre_Bancos_de_Dados_de_Codigo_Aberto/links/004635296426ba710e000000/Comparativo-de-Desempenho-entre-Bancos-de-Dados-de-Codigo-Aberto.pdf},
   Address                   = {Universidade Federal de Pernambuco (UFPE)}
 }
 
@@ -78,7 +78,7 @@
   Author                   = {Leandro Côrte},
   Year                     = {2002},
   Address                   = {Universidade Federal do Rio Grande do Sul (UFRGS)},
-  url={https://lume.ufrgs.br/handle/10183/3375}
+  %url={https://lume.ufrgs.br/handle/10183/3375}
 }
 
 %http://revistas.ung.br/index.php/computacaoaplicada/article/viewFile/1950/1545
