--- a/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
@@ -18,7 +18,7 @@ Segundo \citeonline{comparisonLaravel}, afirmaram que ao comparar PHP procedural
 
 \begin{table}[H]
     \centering
-    \caption[Laravel - Resultado do experimento no tempo de execução]{Resultado do experimento no tempo de execução
+    \caption{Resultado do experimento no tempo de execução
     \label{tab:comparisonLaravel}}
     \begin{tabular}{rrrrr}
         \toprule
@@ -37,9 +37,9 @@ Segundo \citeonline{comparisonLaravel}, afirmaram que ao comparar PHP procedural
 \begin{figure}[H]
     \centering
     \caption{Tendências de eficiência de desenvolvimento - Laravel e CodeIgniter}
-    \includegraphics[width=0.6\textwidth]{./dados/figuras/fig9}
+    \includegraphics[width=0.7\textwidth]{./dados/figuras/fig9}
     \fonte{\citeonline{He2015/01}}
     \label{fig:He2015/01}
 \end{figure}
 
-Para utilização do Laravel é preciso das ferramentas básicas para desenvolvimento em PHP, sugere-se: o XAMPP, pois já incluem o servidor Apache, banco de dados MySql e o próprio PHP, além disso será necessário realizar a instalação do Composer, através do qual é realizada a instalação do Laravel.
+%%%Para utilização do Laravel é preciso das ferramentas básicas para desenvolvimento em PHP, sugere-se: o XAMPP, pois já incluem o servidor Apache, banco de dados MySql e o próprio PHP, além disso será necessário realizar a instalação do Composer, através do qual é realizada a instalação do Laravel.
