--- a/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/mysql.tex
@@ -1,5 +1,6 @@
 Segundo \citeonline{thomsonphp}, o MySQL é o sistema de gerenciamento de banco de dados relacional RDBMS mais utilizado atualmente, devido à sua performance rápida e consistente, além de estar disponível gratuitamente para fins não lucrativos, distribuído sob a licença GNU. O objetivo de um banco de dados é permitir o armazenamento, a classificação e a recuperação dos dados de uma forma eficiente. Um sistema de banco de dados tem como vantagens minimizar as incoerências, garantir a integridade dos dados, facilitar a realização de qualquer modificação necessária e possibilitar a criação de restrições de acesso, tudo de maneira muito organizada.
 
+\newpage
 Desenvolvido pela empresa sueca MySQL AB e publicado, originalmente, em maio de 1995. Após, a empresa foi comprada pela Sun Microsystems e, em janeiro de 2010, integrou a compra da Sun pela Oracle Corporation. Atualmente, a Oracle, embora tenha mantido a versão para a comunidade, tornou seu uso mais restrito e os desenvolvedores criaram, então, o projeto MariaDB para continuar desenvolvendo o código da versão 5.1 do MySQL, de forma totalmente aberta e gratuita. O MariaDB pretende manter compatibilidade com as versões lançadas pela Oracle \cite{mariadb}.
 
 \citeonline{bentodesenvolvimento} explica que PHP e MySQL já são velhos amigos. É bem comum encontrar aplicações que fazem uso destas tecnologias em conjunto. Desde pequenos sites pessoais, até grandes sistemas de gestão e lojas virtuais. O que torna esta parceria tão forte e estável é uma combinação de fatores, como o fato de o MySQL ser um banco fácil de aprender, leve e rápido, o PHP ser fácil e flexível e ambos possuírem licenças permissivas para uso pessoal, comercial e em projetos de software livre, através de funções que conectam, executam código SQL e trazem os resultados para a aplicação.
@@ -10,7 +11,7 @@ De acordo com a \autoref{tab:comparisonMySql}, o desempenho do PostgreSQL foi su
 
 \begin{table}[H]
     \centering
-    \caption[MySQL - Resultados do Sumário Executivo ]{Resultados do Sumário Executivo
+    \caption{Resultados do Sumário Executivo
     \label{tab:comparisonMySql}}
 \begin{tabular}{l|c|c|c|c|}
 \cline{2-5}
