--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -20,6 +20,7 @@ Uma boa API é o conjunto de arquivos que o aplicativo lê ou escreve, bem como 
     \label{fig:api}
 \end{figure}
 
+\newpage
 O World Wide Web Consortium (W3C) é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar a consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
 
 \subsection{REST}
@@ -40,7 +41,9 @@ Podemos destacar os seguintes pontos:
 %%% Original: A geolocalização é capacidade de informar suas coordenadas e pode conseguir recuperar essas informações através do IP, GPS, conexão de \textit{Wi-Fi}, entre outros. Extremamente útil para uma serie de objetivos como informações sobre um determinado local ou uma rota de navegação, a API de geolocalização consiste em um método para localizar exatamente a posição de um usuário, simples de ser implementada e utilizada. Existem duas formas de realizar a captura da geolocalização através da API W3C, compatível com navegadores em \textit{desktop} ou dispositivos móveis. É necessária a autorização do usuário para acessar as suas informações de geolocalização, pois pode comprometer a sua privacidade e integridade \cite{geolocalizacao:2011}.
 
 %%% Rev-Madalozzo: Neste parágrafo você fala de "API W3C", mas nenhum lugar antes daqui comenta sobre isso. Creio que seria interessante dizer o que é.
-A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados de tempo real. Este tipo de sistema tem a capacidade de recuperar as informações de localização através do IP, GPS, conexão de \textit{Wi-Fi}, entre outros. A utilização da geolocalização pode se tornar útil para uma serie de objetivos, como por exemplo obter informações sobre um determinado local ou informações de uma rota de navegação. A API de geolocalização consiste em um método para localizar exatamente a posição de um objeto ou usuário, sendo simples de ser implementada e utilizada. Existem duas formas de realizar a captura da geolocalização através da API W3C, compatível com navegadores em \textit{desktop} ou dispositivos móveis. É necessária a autorização do usuário para acessar as suas informações de geolocalização, pois pode comprometer a sua privacidade e integridade \cite{geolocalizacao:2011}.
+A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados de tempo real. Este tipo de sistema tem a capacidade de recuperar as informações de localização através do IP, GPS, conexão de \textit{Wi-Fi}, entre outros. A utilização da geolocalização pode se tornar útil para uma serie de objetivos, como por exemplo obter informações sobre um determinado local ou informações de uma rota de navegação \cite{geolocalizacao:2011}.
+
+A API de geolocalização consiste em um método para localizar exatamente a posição de um objeto ou usuário, sendo simples de ser implementada e utilizada. Existem duas formas de realizar a captura da geolocalização através da API W3C, compatível com navegadores em \textit{desktop} ou dispositivos móveis. É necessária a autorização do usuário para acessar as suas informações de geolocalização, pois pode comprometer a sua privacidade e integridade \cite{geolocalizacao:2011}.
 
 Compatibilidade com navegadores em \textit{desktop}:
 \begin{itemize}
@@ -72,6 +75,7 @@ Para obter a localização do usuário pode-se utilizar diferentes fontes, tendo
 %%% Rev-Madalozzo: O que você quis dizer sobre o termo "forma assíncrona"?
 Segundo \citeonline{geolocalizacao:2011}, estes são os possíveis métodos para identificar a posição de um objeto ou usuário. Os dois métodos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback} para quando retornar corretamente o dado, um \textit{callback} para se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
 
+\newpage
 \begin{itemize}
 %%% Original: \item enableHighAccuracy: indica se deseja receber os resultados mais precisos, podem ter respostas mais lentes, ele recebe um valor \textit{boolean};
     \item \textit{enableHighAccuracy}: atributo de controle que indica se deseja receber os resultados mais precisos, podem ter respostas mais lentas, ele recebe um valor \textit{boolean};
@@ -82,15 +86,26 @@ Segundo \citeonline{geolocalizacao:2011}, estes são os possíveis métodos para
 %%% Original: Para capturar a posição enquanto tiver alteração, como movimentação do disponível, é necessário utilizar o método \textit{watchPosition}, mantendo a informação sobre o código (para cancelar o monitoramento basta passar o id pra o método \textit{clearWatch}) e a mudança de posição, então basicamente mantém atualizada a posição do usuário, contendo dentro do bloco uma posição do objeto existem as propriedades presentes na \autoref{fig:figura-propertycoords}. Entre estes, apenas ''coords.latitude'' e ''coords.longitude'' são garantidos para serem devolvidos (todos os outros podem ser nulos) \cite{geolocalizacao:2011}.
 
 %%% Rev-Madalozzo: Minha sugestão é refazer essa tabela. Refazer ela melhora a qualidade (que não está boa) e deixar o cabeçalho em português. Também, não tratar como Figura, mas sim como Tabela.
-Para que seja possível capturar a posição enquanto o objeto ou usuário estiver com sua posição em modo de alteração, como movimentação do dispositivo, é necessário utilizar o método \textit{watchPosition}. A \autoref{fig:figura-propertycoords} apresenta as propriedades presentes no objeto de retorno da função. Entre estes, apenas ''coords.latitude'' e ''coords.longitude'' são garantidos para serem devolvidos (todos os outros podem ser nulos) \cite{geolocalizacao:2011}.
+Para que seja possível capturar a posição enquanto o objeto ou usuário estiver com sua posição em modo de alteração, como movimentação do dispositivo, é necessário utilizar o método \textit{watchPosition}. A \autoref{tab:propertycoords} apresenta as propriedades presentes no objeto de retorno da função. Entre estes, apenas \textit{coords.latitude} e \textit{coords.longitude} são garantidos para serem devolvidos (todos os outros podem ser nulos) \cite{geolocalizacao:2011}.
 
-\begin{figure}[H]
+\begin{table}[H]
     \centering
-    \caption{Propriedades dos métodos de geolocalização}
-    \includegraphics[width=0.8\textwidth]{./dados/figuras/fig1}
+    \caption{Propriedades dos métodos de geolocalização
+    \label{tab:propertycoords}}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Propriedade} & \textbf{Detalhes} \\ \hline
+coords.latitude & Número decimal em graus da latitude \\ \hline
+coords.longitude & Número decimal em graus da longitude \\ \hline
+coords.altitude & Altura em metros da posição abaixo da Elipsoide de referência \\ \hline
+coords.accuracy & \begin{tabular}[c]{@{}l@{}}A precisão em metros do resultado retornado. O valor dessa \\ configuração informa a aplicação quão útil é o valor retornado\\ latitude/longitude é realmente. Isso pode ajudar a determinar \\ se o resultado retornado é precisa o suficiente para o propósito\\ a que se destina\end{tabular} \\ \hline
+coords.altitudeAccuracy & A precisão em metros da altitude retornada \\ \hline
+coords.heading & \begin{tabular}[c]{@{}l@{}}Direção que o dispositivo deve tomar, no sentido horário a\\ partir do norte\end{tabular} \\ \hline
+coords.speed & A velocidade desolo atual do dispositivo em metros por segundo \\ \hline
+timestamp & Timestamp de quando a posição foi adquirida \\ \hline
+\end{tabular}
     \fonte{\citeonline{oficinanetagps:2018}}
-    \label{fig:figura-propertycoords}
-\end{figure}
+\end{table}
 
 \section{A-GPS}
 O Sistema de Posicionamento Global Assistido, desenvolvido para localizar satélites com mais rapidez e confiabilidade, dispõe de recursos de rede para localizar e utilizar os satélites em condições de sinal fraco. É uma versão otimizada do  GPS, que recebe dados através de uma conexão de dados (GPRS ou 3G), permitindo que o aparelho calcule as coordenadas da sua posição atual ao receber informações satelitais, sob certas condições, como pode ser visto na \autoref{fig:figura-funcagps} \cite{oficinanetagps:2018}. 
@@ -127,7 +142,9 @@ Inicialmente o GPS realiza uma busca por satélites disponíveis para auxiliá-l
 
 Para dispositivos A-GPS, são utilizados servidores, como por exemplo uma torre de rede móvel (antenas de celulares) e bases (servidores) para obter as informações dos satélites constantemente. Uma vez que esses servidores estão continuamente enviando e recebendo informações dos satélites, não há atraso para conhecer a órbita e a localização exata dos satélites. O tempo para o recebimento dos dados é muito mais rápido que um GPS normal, já que os dados já estão armazenados nos servidores, que analisam os sinais fragmentados recebidos do receptor GPS e aqueles recebidos diretamente do satélite para corrigir erros, proporcionando uma localização exata do aparelho, onde o mesmo só precisará realizar alguns cálculos de triangulação com as antenas de redes móveis por final \cite{oficinanetagps:2018}.
 
-Ainda conforme o autor citado acima, a conexão inicial é feita com uma antena de telefonia celular que previamente armazenou a localização destes satélites e as transmite para o aparelho com uma velocidade até 40 vezes maior. Este recurso só é possível em aparelhos com conexão GPRS, caso este sinal esteja devido à regiões cercadas por edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará normalmente como um GPS convencional. O uso do A-GPS se torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita a localização GPS e A-GPS.
+Ainda conforme o autor citado acima, a conexão inicial é feita com uma antena de telefonia celular que previamente armazenou a localização destes satélites e as transmite para o aparelho com uma velocidade até 40 vezes maior. Este recurso só é possível em aparelhos com conexão GPRS, caso este sinal esteja devido à regiões cercadas por edifícios muito altos, o A-GPS utiliza o apoio da antena quando o sinal GPS, ajudando a manter o sinal estável. Não existindo cobertura de celular, o aparelho funcionará como um GPS convencional. O uso do A-GPS se torna a utilização mais eficaz, evitando o aguardo pela conexão entre satélites. 
+
+Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita a localização GPS e A-GPS.
 
 \begin{figure}[H]
     \centering
@@ -168,6 +185,7 @@ O recurso mais recente adicionado a plataforma, permite planejar uma rota com \t
 
 Várias ferramentas de visualização geoespacial dos principais \textit{players} da indústria da internet estão tomando o mundo digital. Google, Yahoo, Microsoft e Amazon lançaram ferramentas de mapeamento baseada em geolocalização e, coletivamente, elevaram o nível de mapeamento da internet. Por mais que suas capacidades funcionais não forneçam nada de muito diferente do que fornecedores tradicionais da GIS (\textit{Geographic Information System}) já tinham, o surgimento destes serviços foi significativo na medida em que conseguiram captar um público mais amplo. O Google entrou como líder destes serviços com seu produto Google Maps, que fornece uma interface visual atrativa, construídas com tecnologia AJAX, além de dados detalhados de imagens aéreas da superfície terrestre, e uma API aberta que permite a personalização do mapa, incluindo a capacidade de adicionar dados específicos ao mapa e traçar rotas \cite{geospatial:2009}.
 
+\newpage
 \subsection{Google Maps Platform}
 
 A plataforma para desenvolvedores da Google se chama Google Maps Platform, onde 99\% de cobertura no mundo, com a abrangência de mais de 200 países e territórios, estão disponíveis. Contemplando informações de local precisas e em tempo real, são mais de 25 milhões de atualizações por dia e 1 bilhão de usuários ativos por mês, tudo isso gerando uma grande base de dados para consulta \cite{google:2019}. Nela, se obtêm soluções para cada setor:
@@ -185,6 +203,7 @@ O recurso Maps presente na Google Maps Platform, leva o mundo real até os usuá
 
 Através de dados abrangentes e trânsito em tempo real, encontrar o melhor caminho até o destino final se torna um trabalho rápido com o uso do recurso denominado ''Routes''. Com informações de navegação confiáveis e mais de 64 milhões de quilômetros de estradas em todo o mundo, traçar percursos entre cidades ou encontrar hotéis, permite maior eficiência, redução de custos e melhorar a experiência dos clientes finais. Este recurso permite planejar viagens munido de dados atualizados sobre a distância entre pontos, trajetos sugeridos e tempos estimados de deslocamento, com a capacidade de criar trajetos eficientes para até 25 pontos de referência, agilizando os sistemas de entrega, criando itinerários para turistas ou guiar os clientes que alugam carros do seu escritório até os hotéis, realocando o mesmo caso o caminho escolhido possua tráfego \cite{google:2019}. Sua eficiência é justificada pelo agrupamento dos seguinte recursos:
 
+\newpage
 \begin{itemize}
     \item \textit{Directions}: fornece rotas de transporte público, bicicleta, carro e a pé, calcula os tempos de deslocamento atuais ou futuros com base no trânsito em tempo real;
     \item \textit{Distance Matrix}: calcula tempos de deslocamento e distâncias para um ou mais locais;
