--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -33,7 +33,7 @@
     \item[PHP] \textit{Personal Home Page}
     \item[POP3] \textit{Post Office Protocol}
     \item[POSIX] \textit{Portable Operating System Interface}
-    \item[PSR] \textit{PHP Standard Recommendation}
+    \item[PSR] PHP \textit{Standard Recommendation}
     \item[QR] \textit{Quick Response}
     \item[RDBMS] \textit{Relational Database Management Systems}
     \item[REST] \textit{Representational State Transfer}
