LISTA DE FRAGMENTOS DE CÓDIGO

--- a/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
@@ -1,28 +1,6 @@
-\begin{lstlisting}[caption={Função Teste}, style=htmlcssjs, label=DescriptiveLabel]
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-	
-	#main {
-		width: 712px;
-		padding: 100px 28px 120px;
-	}
-	
-	/* .mono {
-		font-size: 90%;
-	} */
-	
-	.cssbtn a {
-		margin-top: 10px;
-		margin-bottom: 10px;
-		width: 60px;  
-		height: 60px;   
-		font-size: 28px;
-		line-height: 62px;
-	}
-\end{lstlisting}
+\autoref{alg:teste}
 
-\autoref{DescriptiveLabel}
-
-\begin{lstlisting}[caption={Função Teste 2}, style=htmlcssjs, label=DescriptiveLabel]
+\begin{lstlisting}[caption={Função Teste 2}, style=htmlcssjs, label=alg:teste]
 Name.prototype = {
   methodName: function(params){
     var doubleQuoteString = "some text";
