--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -21,7 +21,7 @@
     \item[HTTP] \textit{Hypertext Transfer Protocol}
     \item[ID] \textit{Integrated Development Environment}
     \item[IMAP] \textit{Internet Message Access Protocol}
-    \item[IP] \textit{Internet Protocol Address}
+    \item[IP] \textit{Internet Protocol}
     \item[JS] \textit{JavaScript}
     \item[JSON] \textit{JavaScript Object Notation}
     \item[MB] Megabyte
