--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -4,31 +4,30 @@
 
 %%% Original: Atualmente existem aplicações cruciais para facilitar a organização que um dia corrido necessita, como: lista de tarefas para você se lembrar de coisas que não podem ser esquecidas, GPS inteligente para guiar você sempre pelos melhores caminhos em sua cidade e previsão do tempo para nunca mais ser pego de surpresa na rua, são algumas funções de grande auxílio na vida de qualquer um. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido.
 
-%%% Rev-Madalozzo: No final do parágrafo você fala que o princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido... daonde veio esta informação???? Seria bom referenciar quem chegou nesta conclusão!
-O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cruciais para facilitar a organização de um indivíduo, tais como: \textit{i}) lista de tarefas para o usuário lembre de atividades que não podem ser esquecidas; \textit{ii}) GPS inteligente para guiar o usuário; e \textit{iii}) pagar uma conta, para que o usuário não seja pego de surpresa. O princípio básico para desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido \cite{desenvWebFrame}.
+O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cruciais para facilitar a organização de um indivíduo, tais como: \textit{i}) lista de tarefas para que o usuário lembre de atividades que não podem ser esquecidas; \textit{ii}) GPS inteligente para guiá-lo; e \textit{iii}) pagar uma conta, para que o usuário não seja pego de surpresa. O princípio básico para o desenvolvimento de uma aplicação é afirmar que um problema existe e precisa ser resolvido \cite{desenvWebFrame}.
 
 %%% Original: Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
 
 %%% Rev-Madalozzo: No final do parágrafo você inicia a frase falando "É por esse motivo...." - leia a frase, não fica entendido o que "É por esse motivo" que você está querendo falar. É uma frase com causa mas sem efeito.
-Locomoção é uma grande preocupação para quem vive em grandes centros urbanos, ou até mesmo para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do cotidiano do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
+A locomoção é uma grande preocupação para quem vive em grandes centros urbanos ou, até mesmo, para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do dia a sia do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgiu, provavelmente em São Paulo, e foi disseminada em todo o país a partir de 1998 \cite{MotoboyVeja}.
 
 %%% Original: No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
 
 %%% Rev-Madalozzo: A primeira frase deste parágrafo também é uma frase sem causa e efeito. Você comenta que é necessária a otimização (causa) mas não efeito o porque é necessária (efeito). Ajustei.
-No cenário urbano atual, é necessário um algoritmo para otimização de rotas para que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo em rotas mal analisadas. Considerando esta situação, o desenvolvimento de um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários, se tornaria uma solução capaz de resolver tal problema.
+Diante do cenário urbano atual, faz-se necessário um algoritmo para otimizar as rotas afim de que os profissionais da área de transportes não fiquem suscetíveis a perder seu tempo devido a percursos mal analisados. Considerando essa situação, o desenvolvimento de um aplicativo móvel conectado à Google Maps Platform, que proporcione significativa economia de tempo para os usuários, tornar-se-á uma solução para o problema.
 
 %%% Original: Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto até o destino com dados abrangentes e trânsito em tempo real. Oferecendo experiências personalizadas e ágeis que levam o mundo real até os usuários com mapas estáticos e dinâmicos. 
 
-Utilizando a Google Maps Platform, é possível encontrar o melhor trajeto de um ponto inicial até um ponto destino com dados abrangentes e, também, com dados do trânsito em tempo real. Desta maneira, oferecendo experiências personalizadas e ágeis capazes de tornar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
+A partir da utilização da Google Maps Platform, é possível encontrar o melhor trajeto de um ponto inicial até um destino com dados abrangentes e, também, com dados do trânsito em tempo real. Dessa maneira, experiências personalizadas e ágeis são oferecidas, as quais são capazes de transformar o mundo real em virtual, entregando aos usuários mapas estáticos e dinâmicos. 
 
 %%% Original: No segundo capítulo, são detalhadas as tecnologias utilizadas no desenvolvimento deste trabalho, como é o caso dos métodos de geolocalização disponíveis atualmente, o Sistema de Posicionamento Global Assistido (A-GPS) e o serviço de pesquisa e visualização de mapas e imagens de satélite da Terra gratuito na web Google Maps, fornecido pela Google.
 
 %%% Rev-Madalozzo: Sempre usar iniciais em Maiúscuclas nas seguintes palavras: Capítulo, Seção, Tabela, Figura, Autor.
-No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente, Sistema de Posicionamento Global Assistido (A-GPS), serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, este gratuito via internet, através do Google Maps.
+No segundo Capítulo, são detalhadas as tecnologias utilizadas para o desenvolvimento do presente trabalho, tais como: métodos de geolocalização disponíveis atualmente, Sistema de Posicionamento Global Assistido (A-GPS), serviço de pesquisa e visualização de mapas e imagens de satélite do Planeta Terra, gratuito via internet, por meio do Google Maps.
 
-O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem base, servidor independente de plataforma, \textit{frameworks}, banco de dados e servidor web utilizados.
+O terceiro Capítulo aborda o estudo das técnicas e das ferramentas que foram necessárias para a construção da aplicação, passando pela linguagem de programação base, \textit{frameworks}, banco de dados e servidor web.
 
 %%% Original: No quarto capítulo é descrito o desenvolvimento da aplicação Delivery Routes, assim como todos os passos realizados no decorrer do trabalho: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
-No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Também, é descrito todos os passos realizados no decorrer do trabalho, tais como: captura dos dados, painel de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
+No quarto Capítulo é descrito o desenvolvimento da aplicação, denominada Delivery Routes. Esse também, discorre acerca de todos os passos realizados no decorrer do trabalho, tais como: coleta dos dados, módulo de gerenciamento para controle das entregas e o posterior acompanhamento das rotas de entregas.
 
 Por fim, no quinto Capítulo são apresentadas as conclusões e as propostas para futuros trabalhos.
