--- a/text-elements/pre-textuais/capa.tex
+++ b/text-elements/pre-textuais/capa.tex
@@ -48,7 +48,8 @@
 %\logoinstituicao{0.2}{dados/figuras/logo-instituicao.png} 
 
 % DADOS DOS ORIENTADORES---------------------------------------------------------------------------------
-\orientador{Prof. Dr. Guilherme Afonso Madalozzo}
+%Prof. Dr.
+\orientador{Guilherme Afonso Madalozzo}
 %\orientador[Orientadora:]{Nome da orientadora}
 \instOrientador{Instituição do orientador}
 
