--- a/text-elements/textuais/introducao.tex
+++ b/text-elements/textuais/introducao.tex
@@ -9,7 +9,7 @@ O cotidiano do mundo moderno faz com que algumas aplicações virtuais sejam cru
 %%% Original: Locomoção é uma grande preocupação para quem vive em grandes centros urbanos. Utilizar o carro nem sempre é uma experiência agradável, afinal, não é nada difícil encontrar congestionamentos, principalmente quando é necessário atravessar a cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgido provavelmente em São Paulo e disseminado em todo o país em 1998 \cite{MotoboyVeja}.
 
 %%% Rev-Madalozzo: No final do parágrafo você inicia a frase falando "É por esse motivo...." - leia a frase, não fica entendido o que "É por esse motivo" que você está querendo falar. É uma frase com causa mas sem efeito.
-A locomoção é uma grande preocupação para quem vive em grandes centros urbanos ou, até mesmo, para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do dia a sia do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgiu, provavelmente em São Paulo, e foi disseminada em todo o país a partir de 1998 \cite{MotoboyVeja}.
+A locomoção é uma grande preocupação para quem vive em grandes centros urbanos ou, até mesmo, para usuários que visitam cidades com caminhos desconhecidos. Utilizar o carro nem sempre é a melhor decisão ou uma experiência agradável, afinal, congestionamentos já fazem parte do dia a dia do brasileiro, principalmente quando é necessário percorrer um longo caminho na cidade para entregar ou buscar um objeto. É por esse motivo que a profissão chamada motoboy surgiu, provavelmente em São Paulo, e foi disseminada em todo o país a partir de 1998 \cite{MotoboyVeja}.
 
 %%% Original: No cenário atual, é necessário uma otimização de rotas para estes profissionais da área de transportes que estão suscetíveis a perda de tempo caso não analisadas coerentemente por alguém capacitado. Um aplicativo móvel conectado a Google Maps Platform, proporcionando uma solução significativa na economia de tempo para os usuários.
 
