Módulo de gerenciamento

--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -30,6 +30,7 @@
     \item[NNTP] \textit{Network News Transfer Protocol}
     \item[ORM] \textit{Object Relational Mapper}
     \item[OSDB] \textit{Open Source Database Benchmark}
+    \item[PDV] Ponto De Vendas
     \item[PHP] \textit{Personal Home Page}
     \item[POP3] \textit{Post Office Protocol}
     \item[POSIX] \textit{Portable Operating System Interface}
