--- a/referencias.bib
+++ b/referencias.bib
@@ -73,6 +73,14 @@
   Address                   = {Universidade Federal de Pernambuco (UFPE)}
 }
 
+@Article{bcrypt,
+  Title                    = {A Future-Adaptable Password Scheme},
+  Author                   = {Niels Provos and David Mazières},
+  Year                     = {1999},
+  %url={https://www.usenix.org/legacy/event/usenix99/provos/provos_html/index.html},
+  Address                   = {USENIX}
+}
+
 @Article{apache:corte,
   Title                    = {Método para  a avaliação de servidores WWW no ambiente corporativo},
   Author                   = {Leandro Côrte},
@@ -90,6 +98,13 @@
   Urlaccessdate           = {29 de setembro de 2019}
 }
 
+@misc{iFood,
+  Title                   = {Kitchen},
+  Author                  = {iFood},
+  Year                    = {2019},
+  Url                     =  {https://developer.ifood.com.br/},
+  Urlaccessdate           = {18 de outubro de 2019}
+}
 @misc{mariadb,
   Title                   = {About MariaDB},
   Author                  = {MariaDB},
