Módulo de gerenciamento

--- a/referencias.bib
+++ b/referencias.bib
@@ -98,6 +98,22 @@
   Urlaccessdate           = {29 de setembro de 2019}
 }
 
+@misc{bootstrap,
+  Title                   = {Bootstrap - The most popular HTML, CSS, and JS library in the world},
+  Author                  = {Bootstrap},
+  Year                    = {2018},
+  Url                     =  {https://getbootstrap.com/},
+  Urlaccessdate           = {19 de outubro de 2019}
+}
+
+@misc{webpack,
+  Title                   = {Webpack},
+  Author                  = {Webpack},
+  Year                    = {2019},
+  Url                     =  {http://webpack.github.io/},
+  Urlaccessdate           = {19 de outubro de 2019}
+}
+
 @misc{iFood,
   Title                   = {Kitchen},
   Author                  = {iFood},
